Add application resource
