# internal/api/restapi/models/department.go
@@ -1,70 +1,0 @@
-// Code generated by go-swagger; DO NOT EDIT.
-
-package models
-
-// This file was generated by the swagger tool.
-// Editing this file might prove futile when you re-run the swagger generate command
-
-import (
-	"bytes"
-	"context"
-	"encoding/json"
-
-	"github.com/go-openapi/strfmt"
-	"github.com/go-openapi/swag"
-)
-
-// Department department
-//
-// swagger:model department
-type Department struct {
-
-	// o ID
-	OID string `json:"OID,omitempty"`
-}
-
-// UnmarshalJSON unmarshals this object while disallowing additional properties from JSON
-func (m *Department) UnmarshalJSON(data []byte) error {
-	var props struct {
-
-		// o ID
-		OID string `json:"OID,omitempty"`
-	}
-
-	dec := json.NewDecoder(bytes.NewReader(data))
-	dec.DisallowUnknownFields()
-	if err := dec.Decode(&props); err != nil {
-		return err
-	}
-
-	m.OID = props.OID
-	return nil
-}
-
-// Validate validates this department
-func (m *Department) Validate(formats strfmt.Registry) error {
-	return nil
-}
-
-// ContextValidate validates this department based on context it is used
-func (m *Department) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
-	return nil
-}
-
-// MarshalBinary interface implementation
-func (m *Department) MarshalBinary() ([]byte, error) {
-	if m == nil {
-		return nil, nil
-	}
-	return swag.WriteJSON(m)
-}
-
-// UnmarshalBinary interface implementation
-func (m *Department) UnmarshalBinary(b []byte) error {
-	var res Department
-	if err := swag.ReadJSON(b, &res); err != nil {
-		return err
-	}
-	*m = res
-	return nil
-}
